--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@ int main() {
 	printf("\n ");
 	getchar();
 }
-avigot masivi 100 elementiani da shevavsot shemtxveviti ricxvebit romlebic ar iyofa 2 ze da 3 ze
+avigot masivi 100 elementiani da shevavsot shemtxveviti ricxvebit romlebic ar iyofa 2 ze da 3 ze n1
+N2 graveman githubze : acigot 100 elementiani amsivi da shevavsot shemtxveviti martivi ricxvebit!
 
