--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ int main() {
 	printf("\n ");
 	getchar();
 }
-avigot masivi 100 elementiani da shevavsot shemtxveviti ricxvebit romlebic ar iyofa 2 ze da 3 ze n1
-N2 graveman githubze : acigot 100 elementiani amsivi da shevavsot shemtxveviti martivi ricxvebit! jer qveda ixsneba mere zeda ! 
+
+jer qveda ixsneba mere zeda ! 
 zeda aris HINT qveda main funqciistvis ! mainidan iwyeba programis shesruleba miuxedavad imisa qvemot aris tu ara rame ! indexad gamovacxadet calke !
 sanam i < 100 ze , 100 farglebshi rand ricxvi vagenderirebt da shevitanet cvaldshi romelsac qvia r ! 
 isprime cvladi romelic gveubneba martivi ricxvia tu ara ! isprimes argumentia number ! tu nashtis gareshe ikofa romelime ricxvze e.i es ricxvi ar aris martivi !
